Fixed bugs: broken title and too much padding

--- a/media/css/page.css
+++ b/media/css/page.css
@@ -53,7 +53,7 @@ h1, h2, h3, h4 {
 }
 
 div.options {
-  padding-top: 60px;
+  padding-top: 15px;
 }
 
 div.options h3 {
@@ -83,7 +83,7 @@ div.footer {
 }
 
 div.page {
-  margin-top: 80px;
+  margin-top: 15px;
 }
 
 div.page h2 {
